--- a/Contact.html
+++ b/Contact.html
@@ -4,21 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>留言板-LCの个人小窝→_→ Z☡zᶻ</title>
+    <title>联系我-LCの个人小窝→_→ Z☡zᶻ</title>
     <style></style>
     <link rel="stylesheet" href="./Style1.css">
 </head>
 <body>
 
     <div class="upinhead">
-        <div class="home">
-            <a href="./Home.html">
+        <div class="index">
+            <a href="./index.html">
                 <img src="./Quote/个人网站logo白.png" alt="" height="50px">
             </a>
         </div>
         <div class="fighttext">
-            <div class="homea">
-                <a href="./Home.html">首页</a>
+            <div class="indexa">
+                <a href="./index.html">首页</a>
             </div>
             <div class="work">
                 <a href="./Work.html">作品</a>
