--- a/Work.html
+++ b/Work.html
@@ -11,14 +11,14 @@
 <body>
 
     <div class="upinhead">
-        <div class="home">
-            <a href="./Home.html">
+        <div class="index">
+            <a href="./index.html">
                 <img src="./Quote/个人网站logo白.png" alt="" height="50px">
             </a>
         </div>
         <div class="fighttext">
-            <div class="homea">
-                <a href="./Home.html">首页</a>
+            <div class="indexa">
+                <a href="./index.html">首页</a>
             </div>
             <div class="work">
                 <a href="./Work.html">作品</a>
